# halo2_okx

./: Cargo.toml
field/: Cargo.toml
field/src/: goldilocks_field.rs  lib.rs
halo2_gadgets/src/poseidon/: pow5.rs
halo2_proofs/: Cargo.toml
halo2_proofs/src/: arithmetic.rs  fields.rs  hash.rs  helpers.rs  lib.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/dev/: cost.rs
halo2_proofs/src/fields/: goldilocks_field.rs
halo2_proofs/src/hash/: poseidon.rs  poseidon_goldilocks.rs
halo2_proofs/src/plonk/: config.rs  keygen.rs  permutation.rs  plonky2.rs  prover.rs  vanishing.rs  verifier.rs
halo2_proofs/src/plonk/lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/plonky2/: keygen.rs  permutation.rs  prover.rs  transcript.rs  vanishing.rs  verifier.rs
halo2_proofs/src/plonk/plonky2/permutation/: keygen.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/plonky2/vanishing/: prover.rs  verifier.rs
halo2_proofs/src/plonk/vanishing/: prover.rs  verifier.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  fri.rs  merkle_tree.rs  multiopen.rs
halo2_proofs/src/poly/commitment/: fri.rs  merkle_tree.rs  prover.rs  verifier.rs
halo2_proofs/src/poly/fri/: prover.rs  verifier.rs
halo2_proofs/src/poly/multiopen/: prover.rs  verifier.rs
halo2_proofs/tests/: plonk_api.rs
