[package]
name = "field"
version = "0.1.0"
authors = ["Liang Xiong <liang.xiong@okg.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13"
rand_core = { version = "0.6", default-features = false }
plonky2_field = {git = "https://github.com/0xPolygonZero/plonky2", package="plonky2_field"}
subtle = { version = "2.3", default-features = false }
rand = { version = "0.8", default-features = false }
